--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -13,6 +13,16 @@
   }
   .hero-text p{
       color: rgb(0, 0, 0);
-      font-weight: 600;
+      font-weight: 600;}
+
+  .banner-btn{
+      padding: 10px 40px;
+      background-color: rgba(255, 255, 255, 0.616);
+      border: 2px solid black;
+      color: rgb(0, 0, 0);
+      font-weight: 700;
   }
+  .banner-btn:hover{
+      background-color:white;
+  } 
   
