--- a/src/Pages/Departments/Departments.css
+++ b/src/Pages/Departments/Departments.css
@@ -1,10 +1,10 @@
-.services-container{
+.departments-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
 }
 @media only screen and (max-width:688px) {
-    .services-container{
+    .departments-container{
         grid-template-columns: repeat(1, 1fr);
     }
 }
